# django-dsgovbr

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  PUBLISHING.md  README.md  VERSIONS.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: publish-to-pypi.yml  test.yml
examples/django/admin/: change_form.html  change_form_object_tools.html
src/dsgovbr/: __init__.py  admin.py  apps.py  context_processors.py
src/dsgovbr/static/admin/js/: dsgovbr_admin_actions.js  dsgovbr_admin_filters.js  dsgovbr_admin_submit_line.js
src/dsgovbr/static/dsgovbr/css/: dsgovbr.css
src/dsgovbr/templates/admin/: actions.html  app_list.html  base.html  base_site.html  change_form.html  change_form_object_tools.html  change_list.html  change_list_admin_actions.html  change_list_dsgovbr_results.html  change_list_footer.html  change_list_header.html  change_list_object_tools.html  change_list_results.html  filter.html  filters.html  index.html  nav_sidebar.html  object_history.html  pagination.html  search_form.html  submit_line.html
src/dsgovbr/templates/admin/edit_inline/: stacked.html
src/dsgovbr/templates/admin/import_export/: change_list.html  change_list_export.html  change_list_export_item.html  change_list_import.html  change_list_import_export.html  change_list_import_item.html  export.html  import.html  resource_fields_list.html
src/dsgovbr/templates/dsgovbr/: favicon.html
src/dsgovbr/templates/simple_history/: object_history.html  object_history_form.html  object_history_list.html  submit_line.html
src/dsgovbr/templatetags/: dsgovbr.py  dsgovbr_admin_list.py
(+3 files in other folders)
