[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-dsgovbr"
version = "0.1.0"
description = "Compliance com o https://www.gov.br/ds/home"
readme = "README.md"
authors = [
    {name = "Kelson da Costa Medeiros", email = "kelsoncm@gmail.com"}
]
license = {text = "MIT License"}
requires-python = ">=3.10"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
keywords = ["django", "govbr", "design-system", "gov.br"]

[project.urls]
Homepage = "https://github.com/kelsoncm/django-dsgovbr"
Repository = "https://github.com/kelsoncm/django-dsgovbr"
"Bug Tracker" = "https://github.com/kelsoncm/django-dsgovbr/issues"

[tool.setuptools]
packages = {find = {where = ["src"]}}
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js", "*.png", "*.jpg", "*.gif", "*.svg", "*.ico"]
